--- a/.github/workflows/ci-sample.yml
+++ b/.github/workflows/ci-sample.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: dotnet build samples\Plugin.Maui.SwipeCardView.sln -c Release
+      run: dotnet build samples\SwipeCardView.Sample.sln -c Release
