Update packages, reorganize SwipeCardView, and refactor code
Updated `Microsoft.Maui.Controls` to version `8.0.92` and
`Microsoft.Extensions.Logging.Debug` to version `8.0.1` in
project files. Added `Microsoft.Maui.Controls.Compatibility`
package reference. Reorganized `SwipeCardView.cs` with regions
for better code structure. Moved `OnPanUpdated` to `Event
Handlers` region and added a new method for pan gesture updates.
Removed `DraggingCardPosition` property, initializing it in the
constructor. Moved `SwipeCardDirectionExtensions` to a separate
file and cleaned up redundant code and `using` directives.

--- a/samples/SwipeCardView.Sample/SwipeCardView.Sample.csproj
+++ b/samples/SwipeCardView.Sample/SwipeCardView.Sample.csproj
@@ -57,12 +57,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.92" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="../../src/Plugin.Maui.SwipeCardView/Plugin.Maui.SwipeCardView.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.Maui.Controls.Compatibility" Version="8.0.92" />
 	</ItemGroup>
 
 </Project>
